# player_analysis

./: README.md  analysis.ipynb  main.py  nba-2425.csv  pyproject.toml
